--- a/src/view/FormAnamnese.form
+++ b/src/view/FormAnamnese.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="undecorated" type="boolean" value="true"/>
@@ -81,11 +85,11 @@
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
-                              <Component id="txtPesquisa" min="-2" pref="481" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                              <Component id="txtPesquisa" pref="613" max="32767" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="mGradientButton1" min="-2" pref="48" max="-2" attributes="0"/>
-                              <EmptySpace pref="108" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -114,7 +118,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Nunito" size="18" style="0"/>
                         </Property>
-                        <Property name="label" type="java.lang.String" value="Pesquisar"/>
+                        <Property name="label" type="java.lang.String" value="Pesquisar Desatualizados"/>
                         <Property name="selectionColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="99" green="99" red="0" type="rgb"/>
                         </Property>
@@ -146,8 +150,8 @@
                         </Property>
                       </Properties>
                       <Events>
-                        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mGradientButton1MouseExited"/>
                         <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mGradientButton1MouseEntered"/>
+                        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mGradientButton1MouseExited"/>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mGradientButton1ActionPerformed"/>
                       </Events>
                     </Component>
@@ -175,7 +179,7 @@
                   </AuxValues>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="20" y="160" width="680" height="440"/>
+                      <AbsoluteConstraints x="20" y="150" width="690" height="440"/>
                     </Constraint>
                   </Constraints>
 
@@ -276,19 +280,29 @@
                     </Constraint>
                   </Constraints>
                 </Component>
-                <Component class="com.hq.swingmaterialdesign.materialdesign.MButton" name="mButton1">
+                <Component class="com.hq.swingmaterialdesign.materialdesign.MButton" name="botConfirmar1">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="45" green="3c" red="32" type="rgb"/>
+                      <Color blue="33" green="33" red="33" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="mButton1"/>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="null"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Realizar"/>
+                    <Property name="borderRadius" type="int" value="50"/>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Nunito Black" size="14" style="0"/>
+                    </Property>
+                    <Property name="type" type="com.hq.swingmaterialdesign.materialdesign.MButton$Type" editor="org.netbeans.modules.form.editors.EnumEditor">
+                      <Value id="RAISED"/>
+                    </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mButton1ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botConfirmar1ActionPerformed"/>
                   </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="550" y="620" width="130" height="40"/>
+                      <AbsoluteConstraints x="540" y="600" width="180" height="50"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -331,15 +345,15 @@
                                           <EmptySpace pref="2" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="jRadioButton1" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="radioSim" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                  <Component id="jRadioButton2" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="radioNao" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                               <Group type="103" alignment="0" groupAlignment="0" attributes="0">
                                                   <Component id="txtInfSobrepeso" alignment="1" min="-2" pref="503" max="-2" attributes="0"/>
-                                                  <Component id="txtInfSobrepeso1" alignment="1" min="-2" pref="503" max="-2" attributes="0"/>
-                                                  <Component id="txtInfSobrepeso2" alignment="1" min="-2" pref="503" max="-2" attributes="0"/>
+                                                  <Component id="txtColesterol" alignment="1" min="-2" pref="503" max="-2" attributes="0"/>
+                                                  <Component id="txtMedicamentos" alignment="1" min="-2" pref="503" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
@@ -404,15 +418,15 @@
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="txtInfSobrepeso" min="-2" pref="51" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="txtInfSobrepeso1" min="-2" pref="51" max="-2" attributes="0"/>
+                                  <Component id="txtColesterol" min="-2" pref="51" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="txtInfSobrepeso2" min="-2" pref="51" max="-2" attributes="0"/>
+                                  <Component id="txtMedicamentos" min="-2" pref="51" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jRadioButton1" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jRadioButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="radioSim" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="radioNao" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                               </Group>
@@ -567,7 +581,7 @@
                     <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="txtAtvidadeFisica.setDocument(new LimitText(50));"/>
                   </AuxValues>
                 </Component>
-                <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtInfSobrepeso1">
+                <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtColesterol">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nunito" size="16" style="0"/>
@@ -578,7 +592,7 @@
                     <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="txtAtvidadeFisica.setDocument(new LimitText(50));"/>
                   </AuxValues>
                 </Component>
-                <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtInfSobrepeso2">
+                <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtMedicamentos">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nunito" size="16" style="0"/>
@@ -594,13 +608,19 @@
                     <Property name="text" type="java.lang.String" value="Fumante"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JRadioButton" name="jRadioButton1">
+                <Component class="javax.swing.JRadioButton" name="radioSim">
                   <Properties>
+                    <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+                      <ComponentRef name="buttonGroup1"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Sim"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JRadioButton" name="jRadioButton2">
+                <Component class="javax.swing.JRadioButton" name="radioNao">
                   <Properties>
+                    <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+                      <ComponentRef name="buttonGroup1"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="N&#xe3;o"/>
                   </Properties>
                 </Component>
