--- a/src/relatorios/Balanco.jrxml
+++ b/src/relatorios/Balanco.jrxml
@@ -5,7 +5,7 @@
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w1" value="486"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="500"/>
 	<queryString language="ejbql">
-		<![CDATA[select c from Caixa c ]]>
+		<![CDATA[select c from Caixa c]]>
 	</queryString>
 	<field name="codigo" class="java.lang.Integer">
 		<fieldDescription><![CDATA[codigo]]></fieldDescription>
@@ -40,14 +40,14 @@
 	<field name="listaPagamentos" class="java.util.List">
 		<fieldDescription><![CDATA[listaPagamentos]]></fieldDescription>
 	</field>
-	<field name="nome" class="java.lang.String">
-		<fieldDescription><![CDATA[secretario.nome]]></fieldDescription>
-	</field>
 	<variable name="entradas1" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{entradas}]]></variableExpression>
 	</variable>
 	<variable name="saidas1" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{saidas}]]></variableExpression>
+	</variable>
+	<variable name="entradas2" class="java.lang.Double" resetType="Page" calculation="Sum">
+		<variableExpression><![CDATA[$F{entradas}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -203,14 +203,14 @@
 			<textField evaluationTime="Report">
 				<reportElement x="110" y="20" width="211" height="20" uuid="e21df8e4-57b1-432f-a3d6-e5d17f3bd6f1"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{secretario}.getNome()]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="40" splitType="Stretch">
+		<band height="93" splitType="Stretch">
 			<textField>
-				<reportElement positionType="Float" x="419" y="19" width="135" height="19" uuid="e193cf71-43d8-4740-a3f1-fb832aff2ba4"/>
+				<reportElement positionType="Float" x="420" y="50" width="135" height="19" uuid="e193cf71-43d8-4740-a3f1-fb832aff2ba4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
